--- a/pom.xml
+++ b/pom.xml
@@ -6,15 +6,12 @@
 	<artifactId>bluesky-github-io</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.1.RELEASE</version>
+		<groupId>io.github.luversof</groupId>
+		<artifactId>bluesky-boot-starter-parent</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<properties>
-		<java.version>11</java.version>
-		<asciidoctor.maven.plugin.version>1.6.0</asciidoctor.maven.plugin.version>
-		<spring-doc-resources.version>0.2.2.RELEASE</spring-doc-resources.version>
-		<refdocs.build.directory>${project.build.directory}/refdocs/</refdocs.build.directory>
+		<asciidocs.output.directory>docs</asciidocs.output.directory>
 	</properties>
 
 	<dependencies>
@@ -22,128 +19,42 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
-
-		<dependency>
-			<groupId>io.spring.docresources</groupId>
-			<artifactId>spring-doc-resources</artifactId>
-			<version>${spring-doc-resources.version}</version>
-			<type>zip</type>
-			<optional>true</optional>
-		</dependency>
 	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>unpack-doc-resources</id>
-						<goals>
-							<goal>unpack-dependencies</goal>
-						</goals>
-						<phase>generate-resources</phase>
-						<configuration>
-							<includeGroupIds>io.spring.docresources</includeGroupIds>
-							<includeArtifactIds>spring-doc-resources</includeArtifactIds>
-							<includeTypes>zip</includeTypes>
-							<excludeTransitive>true</excludeTransitive>
-							<outputDirectory>${refdocs.build.directory}</outputDirectory>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>copy-asciidoc-resources</id>
-						<phase>generate-resources</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${refdocs.build.directory}</outputDirectory>
-							<resources>
-								<resource>
-									<directory>src/main/asciidoc</directory>
-									<filtering>false</filtering>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-				</executions>
-				<configuration>
-					<sourceDirectory>${refdocs.build.directory}</sourceDirectory>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.asciidoctor</groupId>
-				<artifactId>asciidoctor-maven-plugin</artifactId>
-				<version>${asciidoctor.maven.plugin.version}</version>
-				<dependencies>
-					<dependency>
-						<groupId>org.springframework.restdocs</groupId>
-						<artifactId>spring-restdocs-asciidoctor</artifactId>
-						<version>${spring-restdocs.version}</version>
-					</dependency>
-				</dependencies>
-				<executions>
-					<execution>
-						<id>asciidoc-to-html</id>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>process-asciidoc</goal>
-						</goals>
-						<configuration>
-							<sourceDirectory>${refdocs.build.directory}</sourceDirectory>
-							<backend>html5</backend>
-							<sourceHighlighter>highlight.js</sourceHighlighter>
-							<preserveDirectories>true</preserveDirectories>
-							<!-- <outputDirectory>.</outputDirectory> -->
-							<attributes>
-								// these attributes are required to use the doc resources
-								<docinfo>shared</docinfo>
-								<stylesdir>css/</stylesdir>
-								<stylesheet>spring.css</stylesheet>
-								<linkcss>true</linkcss>
-								<icons>font</icons>
-								<highlightjsdir>js/highlight</highlightjsdir>
-								<highlightjs-theme>github</highlightjs-theme>
-								
-								<java-version>${java.version}</java-version>
-								<spring-restdocs-version>${spring-restdocs.version}</spring-restdocs-version>
-								<spring-cloud-data-flow-version>2.2.0.RELEASE</spring-cloud-data-flow-version>
-								<basedir>${project.basedir}</basedir>
-							</attributes>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
 
 	<repositories>
 		<repository>
 			<id>spring-snapshots</id>
-			<url>http://repo.spring.io/snapshot</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
+			<url>https://repo.spring.io/snapshot</url>
+			<snapshots />
+			<releases>
+				<enabled>false</enabled>
+			</releases>
 		</repository>
 		<repository>
 			<id>spring-milestones</id>
-			<url>http://repo.spring.io/milestone</url>
+			<url>https://repo.spring.io/milestone</url>
 		</repository>
 		<repository>
-			<id>spring-releases</id>
-			<url>https://repo.spring.io/release</url>
+			<id>github-bluesky-maven-repo</id>
+			<url>https://raw.githubusercontent.com/luversof/bluesky-maven-repo/master/snapshots</url>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
+			</snapshots>
 		</repository>
 	</repositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>spring-snapshots</id>
+			<url>https://repo.spring.io/snapshot</url>
+			<snapshots />
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+		</pluginRepository>
+		<pluginRepository>
+			<id>spring-milestones</id>
+			<url>https://repo.spring.io/milestone</url>
+		</pluginRepository>
+	</pluginRepositories>
 </project>
