--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
 	<artifactId>bluesky-github-io</artifactId>
 	<parent>
 		<groupId>io.github.luversof</groupId>
-		<artifactId>bluesky-boot-starter-parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<artifactId>bluesky-boot-parent</artifactId>
+		<version>3.1.0-SNAPSHOT</version>
 	</parent>
 	<properties>
 		<asciidocs.output.directory>docs</asciidocs.output.directory>
